# om_transliterator

./: .gitignore  CHANGES.txt  LICENSE.txt  README.md  README.txt  pyproject.toml  setup.py
examples/: input.txt  output.txt  transliterator_test.py
om_transliterator/: Transliterator.py  __init__.py  charmap.py
tests/: test_transliterator.py
