[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "om_transliterator"
version = "0.2.0"
description = "Kannada to Latin ISO 15919 (Romanisation) Transliterator."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Shriram Bhat", email = "mail@shrirambhat.com" },
]
keywords = [
    "kannada",
    "english",
    "latin",
    "romanization",
    "iso15919",
    "transliteration",
    "tool",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/shrirambhat/om_transliterator"
Issues = "https://github.com/shrirambhat/om_transliterator/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["om_transliterator*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
